<resources>
    <string name="app_name">W3C</string>
    <string name="title_activity_bottom">bottom</string>
    <string name="title_home">Home</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Search</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slide Show</string>
    <string name="splash">Splash</string>
    <string name="title_profile">Profile</string>
    <string name="action_edtprofile">Edit Profile</string>
    <string name="add">add</string>
    <string name="fragment_favorite">tes favorite</string>
    <string name="post_title">Judul</string>
    <string name="sharing">Isi</string>
    <string name="posting">Posting</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_to_signup">Do you not have account?</string>
    <string name="sign_up_intent">Sign Up</string>
    <string name="err_empty_email">Fill the Email Field</string>
    <string name="err_invalid_email">Invalid Email</string>
    <string name="name_hint">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_signin">Have Account?</string>
    <string name="logout">Logout</string>
    <string name="sign_out">Signout</string>
    <string name="comment">Masukan Komentar</string>
    <string name="required_field">This Field Is Required</string>
</resources>