<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.w3c.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.w3c.ui.dashboard.DashboardFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.w3c.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
    android:id="@+id/navigation_profile"
    android:name="com.example.w3c.ProfileFragment"
    android:label="@string/title_profile"
    tools:layout="@layout/fragment_profile"/>
</navigation>