<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/postThreadLayout"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.PostThread">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postThreadJudul"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_title"
                android:inputType="textCapSentences"
                android:maxLength="50" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postThreadContent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="15dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/sharing"
                android:inputType="textCapSentences"
                android:maxLength="1000" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/postThreadSubmit"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/custom"
            android:text="@string/posting" />
    </LinearLayout>
</ScrollView>